// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card determineWarning should display a warning on cards if there is no user 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    film={
        Object {
            "date": "timeless",
            "id": 1,
            "overview": "Its dark out and were wearing sunglasses",
            "poster": "poster_path",
            "rating": 10,
            "title": "The Blues Brothers",
          }
    }
    handleFavorite={[Function]}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="favorite-img"
          id={undefined}
          onClick={[Function]}
/>,
        <img
          alt="movie-poster"
          className="poster"
          src="https://image.tmdb.org/t/p/w500undefined"
/>,
        <div />,
        <div
          className="information"
>
          <h2>
                    The Blues Brothers
          </h2>
          <h3 />
          <p>
                    Its dark out and were wearing sunglasses
          </p>
</div>,
      ],
      "className": "Card",
      "id": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "favorite-img",
          "id": undefined,
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "movie-poster",
          "className": "poster",
          "src": "https://image.tmdb.org/t/p/w500undefined",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2>
              The Blues Brothers
</h2>,
            <h3 />,
            <p>
              Its dark out and were wearing sunglasses
</p>,
          ],
          "className": "information",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "The Blues Brothers",
            },
            "ref": null,
            "rendered": "The Blues Brothers",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Its dark out and were wearing sunglasses",
            },
            "ref": null,
            "rendered": "Its dark out and were wearing sunglasses",
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="favorite-img"
            id={undefined}
            onClick={[Function]}
/>,
          <img
            alt="movie-poster"
            className="poster"
            src="https://image.tmdb.org/t/p/w500undefined"
/>,
          <div />,
          <div
            className="information"
>
            <h2>
                        The Blues Brothers
            </h2>
            <h3 />
            <p>
                        Its dark out and were wearing sunglasses
            </p>
</div>,
        ],
        "className": "Card",
        "id": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "favorite-img",
            "id": undefined,
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "movie-poster",
            "className": "poster",
            "src": "https://image.tmdb.org/t/p/w500undefined",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                The Blues Brothers
</h2>,
              <h3 />,
              <p>
                Its dark out and were wearing sunglasses
</p>,
            ],
            "className": "information",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "The Blues Brothers",
              },
              "ref": null,
              "rendered": "The Blues Brothers",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Its dark out and were wearing sunglasses",
              },
              "ref": null,
              "rendered": "Its dark out and were wearing sunglasses",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    film={
        Object {
            "date": "timeless",
            "id": 1,
            "overview": "Its dark out and were wearing sunglasses",
            "poster": "poster_path",
            "rating": 10,
            "title": "The Blues Brothers",
          }
    }
    handleFavorite={[Function]}
    user={
        Object {
            "email": "Blues@bluesbros.com",
            "id": 2,
            "name": "Jake",
            "password": "X",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="favorite-img"
          id={undefined}
          onClick={[Function]}
/>,
        <img
          alt="movie-poster"
          className="poster"
          src="https://image.tmdb.org/t/p/w500undefined"
/>,
        <div />,
        <div
          className="information"
>
          <h2>
                    The Blues Brothers
          </h2>
          <h3 />
          <p>
                    Its dark out and were wearing sunglasses
          </p>
</div>,
      ],
      "className": "Card",
      "id": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "favorite-img",
          "id": undefined,
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "movie-poster",
          "className": "poster",
          "src": "https://image.tmdb.org/t/p/w500undefined",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2>
              The Blues Brothers
</h2>,
            <h3 />,
            <p>
              Its dark out and were wearing sunglasses
</p>,
          ],
          "className": "information",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "The Blues Brothers",
            },
            "ref": null,
            "rendered": "The Blues Brothers",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Its dark out and were wearing sunglasses",
            },
            "ref": null,
            "rendered": "Its dark out and were wearing sunglasses",
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="favorite-img"
            id={undefined}
            onClick={[Function]}
/>,
          <img
            alt="movie-poster"
            className="poster"
            src="https://image.tmdb.org/t/p/w500undefined"
/>,
          <div />,
          <div
            className="information"
>
            <h2>
                        The Blues Brothers
            </h2>
            <h3 />
            <p>
                        Its dark out and were wearing sunglasses
            </p>
</div>,
        ],
        "className": "Card",
        "id": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "favorite-img",
            "id": undefined,
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "movie-poster",
            "className": "poster",
            "src": "https://image.tmdb.org/t/p/w500undefined",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                The Blues Brothers
</h2>,
              <h3 />,
              <p>
                Its dark out and were wearing sunglasses
</p>,
            ],
            "className": "information",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "The Blues Brothers",
              },
              "ref": null,
              "rendered": "The Blues Brothers",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Its dark out and were wearing sunglasses",
              },
              "ref": null,
              "rendered": "Its dark out and were wearing sunglasses",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
